--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 17:05:02 2018</p>
+         Last Run: Wed Oct 31 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>15</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,19 +50,19 @@
                         <td>1</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>18</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>5</td>
-                        <td>58</td>
+                        <td>6</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>22</td>
+                        <td>S</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "7",
                  "6",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "82",
                  "69",
-                 "58"
+                 "59"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
                  "18",
-                 "22"
+                 "22",
+                 "27"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 17:05:02 2018</p>
+         Last Run: Wed Oct 31 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>44</td>
+                        <td>42</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
@@ -260,12 +260,12 @@
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>37</td>
+                        <td>35</td>
                         <td>51</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>70</td>
+                        <td>WNW</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
-                 "37",
+                 "42",
+                 "35",
                  "24"
                ]
              },
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "72",
-                 "70",
-                 "69"
+                 "69",
+                 "68"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 17:05:02 2018</p>
+         Last Run: Wed Oct 31 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,7 +463,7 @@
                         <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>35</td>
+                        <td>33</td>
                         <td>79</td>
                         <td>0</td>
                         <td>6</td>
@@ -487,7 +487,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>82</td>
                         <td>0</td>
                         <td>6</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "35",
+                 "33",
                  "24",
-                 "13"
+                 "14"
                ]
              },
              {
