--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 18:05:02 2018</p>
+         Last Run: Wed Oct 31 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>7</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,19 +50,19 @@
                         <td>1</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>6</td>
-                        <td>59</td>
+                        <td>5</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>27</td>
+                        <td>26</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "7",
                  "6",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "69",
-                 "59"
+                 "58"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
-                 "22",
-                 "27"
+                 "17",
+                 "21",
+                 "26"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 18:05:02 2018</p>
+         Last Run: Wed Oct 31 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,38 +246,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>35</td>
+                        <td>53</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>74</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>42</td>
+                        <td>24</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>72</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>9</td>
-                        <td>9</td>
-                        <td>35</td>
-                        <td>51</td>
-                        <td>1</td>
-                        <td>11</td>
-                        <td>WNW</td>
-                        <td>69</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>24</td>
-                        <td>50</td>
+                        <td>18</td>
+                        <td>51</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>68</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "9",
+                 "6",
                  "9",
                  "9"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "9",
+                 "8",
                  "9",
                  "9"
                ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "42",
                  "35",
-                 "24"
+                 "24",
+                 "18"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "53",
                  "52",
-                 "51",
-                 "50"
+                 "51"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "69",
-                 "68"
+                 "74",
+                 "74",
+                 "75"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 18:05:02 2018</p>
+         Last Run: Wed Oct 31 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -462,13 +462,13 @@
                         <td>09:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-2</td>
-                        <td>-4</td>
-                        <td>33</td>
-                        <td>79</td>
+                        <td>-5</td>
+                        <td>32</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>88</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,23 +476,23 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>24</td>
-                        <td>79</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>88</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>14</td>
-                        <td>82</td>
+                        <td>11</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>87</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-6",
                  "-6"
                ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
+                 "32",
                  "24",
-                 "14"
+                 "11"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "79",
-                 "82"
+                 "81",
+                 "81",
+                 "84"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "88",
-                 "87"
+                 "85",
+                 "83",
+                 "81"
                ]
              }
            ]
