--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 19:05:02 2018</p>
+         Last Run: Wed Oct 31 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,34 +34,34 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>3</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>6</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSW</td>
                         <td>21</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>6</td>
-                        <td>4</td>
                         <td>5</td>
-                        <td>58</td>
+                        <td>3</td>
+                        <td>5</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>26</td>
                      </tr>
                   </tbody>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "1",
-                 "4"
+                 "0",
+                 "3"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "0",
                  "3",
-                 "6"
+                 "5"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "69",
-                 "58"
+                 "82",
+                 "70",
+                 "60"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
+                 "16",
                  "21",
                  "26"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 19:05:02 2018</p>
+         Last Run: Wed Oct 31 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>35</td>
-                        <td>53</td>
+                        <td>34</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>74</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>9</td>
                         <td>9</td>
                         <td>18</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>75</td>
+                        <td>74</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "35",
+                 "34",
                  "24",
                  "18"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
                  "52",
-                 "51"
+                 "52",
+                 "50"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "73",
                  "74",
-                 "74",
-                 "75"
+                 "74"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 19:05:02 2018</p>
+         Last Run: Wed Oct 31 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,15 +460,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>32</td>
-                        <td>81</td>
+                        <td>24</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>85</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -480,19 +480,19 @@
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>83</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>11</td>
-                        <td>84</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>81</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
                  "24",
-                 "11"
+                 "24",
+                 "6"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "80",
                  "81",
-                 "81",
-                 "84"
+                 "83"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "87",
                  "85",
-                 "83",
-                 "81"
+                 "83"
                ]
              }
            ]
