--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 20:05:02 2018</p>
+         Last Run: Wed Oct 31 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>21</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>5</td>
                         <td>3</td>
                         <td>5</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "70",
-                 "60"
+                 "69",
+                 "59"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "21",
+                 "17",
+                 "22",
                  "26"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 20:05:02 2018</p>
+         Last Run: Wed Oct 31 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,15 +245,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>34</td>
+                        <td>24</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>73</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,23 +261,23 @@
                         <td>9</td>
                         <td>9</td>
                         <td>24</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>74</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>50</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>74</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
                  "24",
-                 "18"
+                 "24",
+                 "16"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "52",
+                 "51",
                  "50"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "74",
-                 "74"
+                 "72",
+                 "71",
+                 "72"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 20:05:02 2018</p>
+         Last Run: Wed Oct 31 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -462,11 +462,11 @@
                         <td>09:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-4</td>
                         <td>24</td>
                         <td>80</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WNW</td>
                         <td>87</td>
                      </tr>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-4",
                  "-6",
                  "-6"
                ]
